--- a/src/components/organismes/InviteUserList/InviteUserList.scss
+++ b/src/components/organismes/InviteUserList/InviteUserList.scss
@@ -38,6 +38,8 @@
   display: flex;
   align-items: center;
   margin-left: auto;
+  flex: 0 0 220px;
+  justify-content: flex-end;
 }
 
 .userRole {
@@ -48,7 +50,7 @@
   @include link();
   display: flex;
   align-items: center;
-  font-size: 14px;
+  font-size: 13px;
   font-weight: 400;
   cursor: pointer;
   padding: 6px;
@@ -115,5 +117,9 @@
 
   .questionnaireListItem {
     padding-right: 4px;
+  }
+
+  .listItemRight {
+    flex: 0;
   }
 }
