--- a/src/components/pages/MainPage/MainPage.scss
+++ b/src/components/pages/MainPage/MainPage.scss
@@ -79,7 +79,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background-image: -webkit-linear-gradient(top, rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.8));
+  background-image: -webkit-linear-gradient(top, rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.7));
 }
 
 .topSectionWrapper {
@@ -102,8 +102,12 @@
   font-size: 24px;
   line-height: 30px;
   padding: 10px 0;
-  max-width: 600px;
+  max-width: 620px;
   font-weight: 300;
+
+  strong {
+    font-weight: 600;
+  }
 }
 
 .topSectionDescription {
@@ -112,6 +116,10 @@
   line-height: 24px;
   padding: 10px 0 40px;
   max-width: 700px;
+
+  strong {
+    font-weight: 600;
+  }
 }
 
 .headline {
