--- a/src/components/organismes/QuestionnaireForm/QuestionnaireForm.scss
+++ b/src/components/organismes/QuestionnaireForm/QuestionnaireForm.scss
@@ -16,7 +16,7 @@
 
 .descriptionFieldsWrapper {
   background: $dark-5;
-  margin: 0 0 30px;
+  margin: 0 -30px 30px;
   box-sizing: border-box;
   padding: 16px 30px 6px;
 
