--- a/src/components/organismes/UserList/UserList.scss
+++ b/src/components/organismes/UserList/UserList.scss
@@ -46,7 +46,7 @@
   align-items: center;
   margin-left: auto;
   flex: 0 0 164px;
-  justify-content: flex-start;
+  justify-content: flex-end;
 }
 
 .userRole {
