--- a/src/components/organismes/InviteUserList/InviteUserList.scss
+++ b/src/components/organismes/InviteUserList/InviteUserList.scss
@@ -60,7 +60,7 @@
   font-size: 13px;
   font-weight: 400;
   cursor: pointer;
-  padding: 6px;
+  padding: 6px 3px;
   transform: translate(0, 1px);
   transition: color .15s ease-in-out, opacity .15s ease-in-out;
 
