--- a/src/components/pages/QuestionnairesAllInterviewsPage/QuestionnairesAllInterviewsPage.scss
+++ b/src/components/pages/QuestionnairesAllInterviewsPage/QuestionnairesAllInterviewsPage.scss
@@ -80,7 +80,12 @@
     background: $success;
   }
   &.hm {
-    background: $success;
+    background: $blue-light;
+  }
+
+  &.zero {
+    opacity: .3;
+    background: $greyMedium;
   }
 }
 
