--- a/src/styles/includes/_colors.scss
+++ b/src/styles/includes/_colors.scss
@@ -11,6 +11,7 @@ $grey-disabled: #ccc;
 $grey-border-hover: #b8b8b8;
 $linkColor: #3b425e;
 $mainText: #3c3c3c;
+$greyMedium: #999999;
 $greyText: #a0a0a0;
 $placeholderText: #8a8a8a;
 $success: #17b96f;
@@ -20,6 +21,8 @@ $red: #ef2a2a;
 $redPale: #ea4e4e;
 $redPaleHover: #e53636;
 $blue: #0061b6;
+$blue-light: #53b0e7;
+$blue-light-hover: #46a9e3;
 
 $secondcolor-lt: #89c091;
 $secondcolor-bd: #6e9a74;
