--- a/src/components/atoms/RateField/RateField.scss
+++ b/src/components/atoms/RateField/RateField.scss
@@ -15,7 +15,7 @@
   border-radius: 40px;
   cursor: pointer;
   text-shadow: 0 1px 1px $dark-10;
-  opacity: .6;
+  opacity: .7;
   transition: background .15s ease-in-out, opacity .15s ease-in-out;
 
   &:hover {
@@ -53,12 +53,12 @@
   }
 
   &.hm {
-    background: $success;
+    background: $blue-light;
     border-radius: 40px;
     color: $white;
 
     &:hover {
-      background: $success-hover;
+      background: $blue-light-hover;
     }
   }
 
