--- a/src/components/atoms/Textarea/Textarea.scss
+++ b/src/components/atoms/Textarea/Textarea.scss
@@ -21,12 +21,13 @@
 .input {
   display: block;
   width: 100%;
-  padding: 15px 18px;
+  padding: 4px 10px;
   margin: 0 0 0 0;
   box-sizing: border-box;
   outline: 0;
   background-color: $white;
-  border: 1px solid $grey-border;
+  border: 10px solid transparent;
+  box-shadow: 0 0 0 1px $grey-border;
   border-radius: 24px;
   font-size: 14px;
   font-weight: 400;
@@ -41,15 +42,15 @@
   }
 
   &:hover {
-    border-color: $grey-border-hover;
+    box-shadow: 0 0 0 1px $grey-border-hover;
   }
 
   &:focus {
-    border-color: $maincolor-lt;
+    box-shadow: 0 0 0 1px $maincolor-lt;
   }
 
   &.invalid {
-    border-color: $error;
+    box-shadow: 0 0 0 1px $error;
   }
 
   // Size
@@ -68,7 +69,7 @@
     &:focus,
     &:active {
       background: $grey-border;
-      border-color: $grey-border;
+      box-shadow: 0 0 0 1px $grey-border;
     }
   }
 }
