--- a/src/components/pages/MainPage/MainPage.scss
+++ b/src/components/pages/MainPage/MainPage.scss
@@ -170,6 +170,12 @@
   }
 }
 
+@media (max-width: 992px) {
+  .topSectionOverlayVideo {
+    display: none;
+  }
+}
+
 @media (max-width: 600px) {
   .logo {
     width: 180px;
