--- a/src/components/atoms/CheckBox/CheckBox.scss
+++ b/src/components/atoms/CheckBox/CheckBox.scss
@@ -1,8 +1,10 @@
 .labelBody {
   display: inline-block;
   position: relative;
+  max-width: 100%;
   min-height: 14px;
   padding: 0 10px 0 26px;
+  box-sizing: border-box;
   font-size: 13px;
   font-weight: 400;
   line-height: 1.2;
