--- a/src/components/molecules/UserMenu/UserMenu.scss
+++ b/src/components/molecules/UserMenu/UserMenu.scss
@@ -21,6 +21,10 @@
     color: $black;
     text-decoration: none;
   }
+
+  &.explore {
+    color: $maincolor-lt;
+  }
 }
 
 @media (max-width: 930px) {
