--- a/src/components/organismes/InterviewReviews/InterviewReviews.scss
+++ b/src/components/organismes/InterviewReviews/InterviewReviews.scss
@@ -32,6 +32,7 @@
 
 .reviewTextContent {
   flex: 1;
+  margin-right: 12px;
 }
 
 .reviewRate {
@@ -51,7 +52,6 @@
   display: flex;
   width: 90px;
   flex: 0 0 90px;
-  margin-left: 12px;
   margin-right: -8px;
   height: 36px;
   align-items: center;
