--- a/src/components/pages/QuestionnaireAddPage/QuestionnaireAddPage.scss
+++ b/src/components/pages/QuestionnaireAddPage/QuestionnaireAddPage.scss
@@ -8,6 +8,11 @@
   margin-bottom: 24px;
 }
 
+.subHeadline {
+  font-size: 16px;
+  margin-bottom: 12px;
+}
+
 @media (max-width: 600px) {
   .wrapper {
     padding-left: 15px;
