--- a/src/components/organismes/InterviewResultReview/InterviewResultReview.scss
+++ b/src/components/organismes/InterviewResultReview/InterviewResultReview.scss
@@ -10,6 +10,11 @@
   margin-bottom: 24px;
 }
 
+.image {
+  display: block;
+  margin: 0 0 12px;
+}
+
 .description {
   font-size: 14px;
   line-height: 24px;
