--- a/src/components/organismes/InterviewUserInfoForm/InterviewUserInfoForm.scss
+++ b/src/components/organismes/InterviewUserInfoForm/InterviewUserInfoForm.scss
@@ -2,6 +2,13 @@
   margin-bottom: 15px;
 }
 
+.avatar {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 .participants {
   background: $body;
   padding: 15px 20px;
