--- a/src/styles/includes/_colors.scss
+++ b/src/styles/includes/_colors.scss
@@ -17,12 +17,14 @@ $placeholderText: #8a8a8a;
 $success: #17b96f;
 $success-hover: #16b460;
 $error: #ef2a2a;
+$redMain: #ff0000;
 $red: #ef2a2a;
 $redPale: #ea4e4e;
 $redPaleHover: #e53636;
 $blue: #0061b6;
 $blue-light: #53b0e7;
 $blue-light-hover: #46a9e3;
+$greenMain: #10ab00;
 
 $secondcolor-lt: #89c091;
 $secondcolor-bd: #6e9a74;
