--- a/src/components/organismes/InterviewUserInfoForm/InterviewUserInfoForm.scss
+++ b/src/components/organismes/InterviewUserInfoForm/InterviewUserInfoForm.scss
@@ -14,6 +14,8 @@
   padding: 15px 20px;
   box-sizing: border-box;
   margin: 0 -20px 12px;
+  text-align: left;
+  font-size: 14px;
 }
 
 .participantsList {
