--- a/src/components/atoms/AllRightsReservedBlock/AllRightsReservedBlock.scss
+++ b/src/components/atoms/AllRightsReservedBlock/AllRightsReservedBlock.scss
@@ -15,13 +15,28 @@
   }
 }
 
+.modalWrapper  {
+  line-height: 20px;
+}
+
 .copyright {
   margin-bottom: 4px;
+  flex: 0 0 185px;
 }
 
 .link {
   @include link;
   margin: 0 5px;
+}
+
+.linksWrapper {
+  display: flex;
+  flex-wrap: wrap;
+
+  .link {
+    display: block;
+    padding: 3px 0;
+  }
 }
 
 .paymentWrapper {
@@ -38,19 +53,62 @@
   }
 }
 
-@media (max-width: 600px) {
-  .wrapper {
-    &.footer {
-      flex-wrap: wrap;
-      justify-content: center;
+@media (min-width: 1350px) {
+  .linksWrapper {
+    justify-content: center;
+  }
+}
+
+@media (max-width: 1350px) {
+  .linksWrapper {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+
+    .link {
+      display: block;
+      flex: 0 0 calc(33.33% - 10px);
+      padding: 3px 0;
+      box-sizing: border-box;
     }
   }
 
+}
+
+@media (max-width: 870px) {
   .linksWrapper {
+    display: flex;
+    flex-wrap: wrap;
+    margin-left: 40px;
+
+    .link {
+      display: block;
+      flex: 0 0 calc(50% - 20px);
+      padding: 3px 0;
+    }
+  }
+}
+
+@media (max-width: 720px) {
+  .wrapper.footer {
+    display: block;
     text-align: center;
   }
 
-  .link {
-    display: inline-block;
+  .copyright {
+    margin-bottom: 12px;
+  }
+
+  .linksWrapper  {
+    margin-left: 0;
+  }
+}
+
+@media (max-width: 500px) {
+  .linksWrapper {
+    .link {
+      display: block;
+      flex: 0 0 100%;
+    }
   }
 }
