--- a/src/components/organismes/Footer/Footer.scss
+++ b/src/components/organismes/Footer/Footer.scss
@@ -6,9 +6,33 @@
   display: flex;
   align-items: center;
   box-sizing: border-box;
-  padding: 0 30px;
+  padding: 20px 30px;
+}
+
+@media (max-width: 1350px) {
+  .wrapper {
+    height: 112px;
+  }
+}
+
+@media (max-width: 870px) {
+  .wrapper {
+    height: 136px;
+  }
+}
+
+@media (max-width: 720px) {
+  .wrapper {
+    height: 160px;
+  }
 }
 
 @media (max-width: 600px) {
   padding: 0 15px;
+}
+
+@media (max-width: 500px) {
+  .wrapper {
+    height: 250px;
+  }
 }
