--- a/src/components/pages/QuestionnaireInterviewPage/QuestionnaireInterviewPage.scss
+++ b/src/components/pages/QuestionnaireInterviewPage/QuestionnaireInterviewPage.scss
@@ -26,10 +26,11 @@
 .interviewSaved {
   display: flex;
   align-items: center;
-  color: $success;
-  font-size: 14px;
-  margin: 12px 0;
-  font-weight: 500;
+  background: $success;
+  color: $white;
+  font-size: 16px;
+  padding: 12px 0;
+  font-weight: 600;
 }
 
 .successIcon {
