--- a/src/components/organismes/UserInvitedSignUpForm/UserInvitedSignUpForm.scss
+++ b/src/components/organismes/UserInvitedSignUpForm/UserInvitedSignUpForm.scss
@@ -26,6 +26,11 @@
   margin-bottom: 20px;
 }
 
+.representatives {
+  text-align: left;
+  font-size: 13px;
+}
+
 .button {
   min-width: 190px;
   text-align: center;
